syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "EmailProto";

service EmailService {

  rpc SendWelcomeMail (User) returns (EmailResponse);

}

message User {

  string userMail = 1;
  string userName = 2;

}

message EmailResponse {

  bool success = 1;
  string message = 2;
  string error_details = 3;

}